2003-03-??  Rudy Lippan  <rlippan@remotelinux.com> (2.1027)

	* Updated type_info_all() to be more inline with 
	  what DBD::ODBC returns.
	* Added attribute 'auto_reconnect' that allows the auto reconnect
	  behaviour to be toggled. :
	  
	  ** NOTE** The behaviour of auto reconnect has changed.  If 
	  either the MOD_PERL or the GATEWAY_INTERFACE envionment variable is
	  set, auto_reconnect will default to ON; otherwise auto_reconnect
	  will default to off.  Earlier versions of this driver would always
	  try to reconnect to the database on error; however, this is dangerous
	  because table locks could be lost without the application knowing.

	* Fixed a segfault with failed reconnects that were trapped in an
	  eval. The next tine DBD::mysql tried to reconnect, the process
	  would segfault.
	* Added statistics attribute, 'mysql_dbd_stats' which returns
	  a hashref that contains 2 keys 'auto_reconnects' and
	  'failed_auto_reconnects'.
	* Fixed bug where strings that were used in numeric
	  context were not getting quoted on execute(). Now all
	  parameters are bound as varchar by default.

	  **NOTE** this is a chage in behaviour that MAY cause problems
	  with some SQL statements. If quoted integers causes any problems,
	   use bind_param(<column_id>, SQL_INTEGER) to force a column 
	  to be bound as an integer.

	* Added get_info() method. See 'perldoc DBI' for more info
	* Added column_info(). See 'perldoc DBI' for more info [Tim Bunce]

2003-03-03  Jochen Wiedmann  <joe@ispsoft.de> (2.1026)

	* Fixed the handling of case insensitive file
	  names. Jan Dubois, <jand@ActiveState.com>
	* lib/Mysql.pm (listdbs): Added support for user
	  name and password.

2003-01-21  Jochen Wiedmann <joe@ispsoft.de> (2.1025)

        * lib/DBD/mysql.pm: added support for optional
          DBI->data_sources() \%attributes parameter.
          Georg Rehfeld, <georg.rehfeld@gmx.de>
        * lib/DBD/mysql.pod: documented optional